--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         Title="{Binding Title}" Height="700" Width="1450" MinHeight="400" MinWidth="800">
     <DockPanel>
         <DockPanel DockPanel.Dock="Left">
-            <Button Command="{Binding ShowUpdateTabViewCommand}" CommandParameter="UpdateTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top">
+            <Button Command="{Binding ShowUpdateTabViewCommand}" IsEnabled="{Binding ShowUpdateTabViewEnable}" CommandParameter="UpdateTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top">
                 <Image Source="Resources/Update.png" Width="40"/>
                 <ToolTipService.ToolTip>
                     <ToolTip FontSize="15" Content="Update Mod"/>
@@ -60,7 +60,7 @@
                     <ToolTip FontSize="15" Content="Refresh"/>
                 </ToolTipService.ToolTip>
             </Button>
-            <TextBlock Text="{Binding Console.Value}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
+            <TextBlock Text="{Binding Debug.Value}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
         </DockPanel>
         <ContentControl Margin="0 10 10 10" prism:RegionManager.RegionName="ContentRegion" />
     </DockPanel>
