--- a/BSModManager/Views/ChangeModInfo.xaml
+++ b/BSModManager/Views/ChangeModInfo.xaml
@@ -51,12 +51,14 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Button HorizontalAlignment="Right" Content="{Binding NextOrFinish}" Width="60" Command="{Binding NextOrFinishCommand}" Grid.Column="0" Margin="0 0 10 0" BorderBrush="Blue"/>
-            <Button HorizontalAlignment="Right" Content="Exit" Width="60" Command="{Binding ExitCommand}" Grid.Column="1" Margin="10 0 10 0" />
+            <Button HorizontalAlignment="Right" Content="Back" Width="60" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackButtonEnable.Value}" Grid.Column="1" Margin="10 0 10 0" />
+            <Button HorizontalAlignment="Right" Content="Exit" Width="60" Command="{Binding ExitCommand}" Grid.Column="2" Margin="10 0 10 0" />
         </Grid>
     </Grid>
 </UserControl>
