--- a/BSModManager/Views/ChangeModInfo.xaml
+++ b/BSModManager/Views/ChangeModInfo.xaml
@@ -56,9 +56,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button HorizontalAlignment="Right" Content="{Binding NextOrFinish}" Width="60" Command="{Binding NextOrFinishCommand}" Grid.Column="0" Margin="0 0 10 0" BorderBrush="Blue"/>
-            <Button HorizontalAlignment="Right" Content="Back" Width="60" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackButtonEnable.Value}" Grid.Column="1" Margin="10 0 10 0" />
-            <Button HorizontalAlignment="Right" Content="Exit" Width="60" Command="{Binding ExitCommand}" Grid.Column="2" Margin="10 0 10 0" />
+            <Button HorizontalAlignment="Right" Content="Exit" Width="60" Command="{Binding ExitCommand}" Grid.Column="0" Margin="0 0 10 0"/>
+            <Button HorizontalAlignment="Right" Content="Back" Width="60" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackButtonEnable.Value}" Grid.Column="1" Margin="10 0 10 0" BorderBrush="Blue"/>
+            <Button HorizontalAlignment="Right" Content="{Binding NextOrFinish}" Width="60" Command="{Binding NextOrFinishCommand}" Grid.Column="2" Margin="10 0 10 0" Background="Blue" Foreground="White"/>
         </Grid>
     </Grid>
 </UserControl>
